--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
+title: Paul Schlossmacher's Homepage
+page-top-title: Paul Schlossmacher
+top-section-bg-text: Statistics
+home-subtitle: Paul Schlossmacher 
 copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
