--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Paul Schlossmacher's Homepage
 page-top-title: Paul Schlossmacher
-top-section-bg-text: Statistics
+top-section-bg-text:
 home-subtitle: Paul Schlossmacher 
 copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
